# computer_vision6.4

./: README.md  main.py  main.spec  pyproject.toml  requirements.txt
