## pyproject.toml
```toml
[tool.poetry]
name = "traffic-weak-protection"
version = "1.0.0"
description = "교통약자 보호구역 표지판 인식 시스템"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.0"
numpy = "^1.21.0"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
traffic-weak = "main:main"
```